--- a/views/user.haml
+++ b/views/user.haml
@@ -13,11 +13,8 @@
                     %tr
                         %th Server
                         %th Account
-                    - count = 0
                     - for account in @player.accounts
-                        - style = (count % 2) == 0 ? "cell1" : "cell2"
-                        - count += 1
-                        %tr.account{:id => style}
+                        %tr.account
                             %td= account.server.display_name
                             %td= account.name
 
