--- a/views/footer.haml
+++ b/views/footer.haml
@@ -1,7 +1,7 @@
 / This footer is using the minimum markup using current css.  In future, footer css should be optimised to match existing conventions, eg declarations based on clasess.
 %footer.footer
   %ul
-    %li
+    %li.small_print
       .center
         %img.logo{:alt => "logo", :src =>"/logo.png"}
       .center
