Update date and tournament dates for 2017

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -68,6 +68,8 @@
                 %li
                   %a{:href => "/trophies"} Trophies
                 %li
+                  %a{:href => "/archive/2017/index.html"} 2017 tournament
+                %li
                   %a{:href => "/archive/2016/index.html"} 2016 tournament
                 %li
                   %a{:href => "/archive/2015/index.html"} 2015 tournament
