Remove duplicated user info player profile

--- a/views/user.haml
+++ b/views/user.haml
@@ -25,7 +25,9 @@
                     %ul
                         =haml :user_cross_variant_trophies
                         - for @variant in $variant_order
-                            =haml :user_trophies
+                            / only show achievements for games that the player actually played
+                            - if Game.count(user_id: @player.id, version: @variant) > 0
+                                =haml :user_trophies
             .text_content.non_top_post
                 =haml :_player_games
             .text_content.non_top_post
