--- a/views/login.haml
+++ b/views/login.haml
@@ -1,24 +1,32 @@
 .content_bulk
   .text_content_wrapper
-    .text_content
-      %p.center
-        If you haven't signed up yet,
-        %a{:href => "/register"} register here!
-    .text_content
-      %form#login_form{:action => "", :method => "post"}
-        %fieldset
-          #username_row
-            %label{:for => "username"} Username:
-            %input#username{:name => "username", :type => "text", :value => "", :autofocus => "", :placeholder => "username"}/
-            .form_msg
-              Field required
-            %span.clear
-          #password_row
-            %label{:for => "password"} Password:
-            %input#password{:name => "password", :type => "password", :value => "", :placeholder => "password"}/
-            .form_msg
-              Field required
-            %span.clear
-          %input#submit{:name => "submit", :type => "submit", :value => "Log in!"}/
-    %span#end_of_content_spacer.clear
+    - if (Time.new.to_i > $tournament_endtime)
+      .text_content
+        %h1.hcenter Sorry, this year's tournament has ended.
+    - elsif (Time.new.to_i < $tournament_signupstarttime)
+      .text_content
+        %h1.hcenter
+          =haml :registrationdate
+    - else
+      .text_content
+        %p.center
+          If you haven't signed up yet,
+          %a{:href => "/register"} register here!
+      .text_content
+        %form#login_form{:action => "", :method => "post"}
+          %fieldset
+            #username_row
+              %label{:for => "username"} Username:
+              %input#username{:name => "username", :type => "text", :value => "", :autofocus => "", :placeholder => "username"}/
+              .form_msg
+                Field required
+              %span.clear
+            #password_row
+              %label{:for => "password"} Password:
+              %input#password{:name => "password", :type => "password", :value => "", :placeholder => "password"}/
+              .form_msg
+                Field required
+              %span.clear
+            %input#submit{:name => "submit", :type => "submit", :value => "Log in!"}/
+      %span#end_of_content_spacer.clear
 / end of container
