Bring back NetHack 1.3d achievements

--- a/views/trophies.haml
+++ b/views/trophies.haml
@@ -43,7 +43,7 @@
               King of the World: ascend in all variants.
 
         %p.small_print
-          "All variants" means Vanilla NetHack, SporkHack, UnNetHack, GruntHack, NetHack4, DNetHack, NetHack Fourk, and SlashTHEM.
+          "All variants" means every variant except NetHack 1.3d.
           NetHack 1.3d does not contribute to the completion of these trophies.
         .text_content.non_top_post
         %h3
@@ -207,7 +207,7 @@
               dNethack Tour: Played a game (at least 1000 turns) with all the shiny new races/roles in dNethack. 
 
         .text_content.non_top_post
-        %h3
+        %h3#nh1.3d
           Nethack 1.3d
         %ul.trophypage
           %li#old-ascension
