--- a/views/rules.haml
+++ b/views/rules.haml
@@ -2,13 +2,17 @@
   .text_content_wrapper
     / This h2 should be in the branding section
     %section.text_content
-      %h2
+      %h1
         Rules
       %p.description
         Rules here are sensible and even generous.
+        %br
+        You don't need to use common sense when interpreting this rules, but we might.
+        %br
         Staff make the final decision if something's not clear.
+
       %section.text_content
-        %h3
+        %h2
           Please don't:
         %ul
           %li
@@ -19,8 +23,11 @@
             exploit memory corrupting bugs.
           %li
             use disconnection at critical spots to hide a death from logs.
+          %li
+            willfullingly disrupt the tournament experience for other players.
+
       %section.text_content
-        %h3
+        %h2
           Feel free to:
         %ul
           %li
