--- a/views/trophies.haml
+++ b/views/trophies.haml
@@ -8,7 +8,7 @@
           Trophies
         %h3
           Cross-Variant
-        %ul.trophypage
+        %ul.trophypage.indented
           %li#walk_in_the_park
             %img{:style => "vertical-align:middle", :alt => "", :src => "/icons/walk_in_the_park.png"}
             %span
@@ -53,7 +53,7 @@
           Each is worth one point.
           %br
           %span.small_print In variants with additional roles or races only 13 roles resp. 5 races (i.e. as many as in vanilla) must be ascended to achieve this trophy.
-        %ul.trophypage
+        %ul.trophypage.indented
           %li#all-conducts
             %img{:style => "vertical-align:middle", :alt => "", :src => "/icons/all-conducts.png"}
             %span
@@ -95,14 +95,14 @@
 
         %h3#nh1.3d
           Nethack 1.3d
-        %ul.trophypage
+        %ul.trophypage.indented
           %li#old-ascension
             %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/old-ascension.png"}
             %span 
               Ascension: ascend a character.
           %li
             Achievements:
-            %ul.trophypage{:style => "margin-left: 2em;"} 
+            %ul.trophypage.indented
               %li#old-crowned
                 %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/old-crowned.png"}
                 %span
@@ -122,7 +122,7 @@
           All Variants
         %p
           These trophies apply separately to each variant (excluding NetHack 1.3d).
-        %ul.trophypage
+        %ul.trophypage.indented
           %li#c-most-ascensions
             %img{:style => "vertical-align:middle", :alt => "", :src => "/icons/c-most-ascensions.png"}
             %span
@@ -169,7 +169,7 @@
           the same amount of points; in the ranking, they're considered
           as one clan.
         -# example?
-        %ul.trophypage
+        %ul.trophypage.indented
           %li#clan-24h
             %img{:style => "vertical-align:middle", :alt => "", :src => "/icons/clan-24h.png"}
             %span
