--- a/views/cross_variant_games.haml
+++ b/views/cross_variant_games.haml
@@ -5,7 +5,7 @@
     %thead.cf
       %tr
         %th Variant
-        %th Turns (max)
+        %th{style: 'text-align: right'} Turns (max)
         %th Trophy
         %th Medusa
         %th Ascended
